--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,26 @@
 {
-    "title" : "Blinds control",
-    "description" : "Manage blinds for optimal insulation and shading "
+   "altitude_insulation_helper" : "If the sun altitude falls below this level, blinds insulation will be activated",
+   "altitude_label" : "Sun altitude",
+   "altitude_shade_helper" : "If the sun altitude rises above this level, blinds shading will be activated",
+   "azimuth_left_label" : "Left Azimuth",
+   "azimuth_helper" : "If the sun azimuth (between 0 and 360°) is between left and right value, blinds shading will be activated",
+   "azimuth_right_label" : "Right Azimuth",
+   "description" : "Manage blinds for optimal insulation and shading ",
+   "devices_label" : "Blinds",
+   "insulation_active_helper" : "Activate insulation when outside temperature falls below a certain level",
+   "insulation_active_label" : "Blinds insulation",
+   "position_label" : "Blind position",
+   "shade_active_helper" : "Use blinds for shading when outside-, inside-temperature and sun intensity rise above a certain level",
+   "shade_active_label" : "Blinds shading",
+   "sun_uv_helper" : "If UV index rises above this level shading will be activated",
+   "sun_uv_label" : "UV level",
+   "temperature_inside_label" : "Inside temperature",
+   "temperature_inside_sensor_label" : "Inside Temperature Sensor",
+   "temperature_inside_shade_helper" : "If inside temperature rises above this level shading will be activated",
+   "temperature_outside_insulation_helper" : "If outside temperature falls belo this level shading will be activated",
+   "temperature_outside_label" : "Outside temperature",
+   "temperature_outside_sensor_label" : "Outside Temperature Sensor",
+   "temperature_outside_shade_helper" : "If outside temperature rises above this level shading will be activated",
+   "title" : "Blinds control",
+   "uv_sensor_label" : "UV Sensor"
 }
