--- a/lang/en.json
+++ b/lang/en.json
@@ -5,7 +5,7 @@
    "azimuth_left_label" : "Left Azimuth",
    "azimuth_helper" : "If the sun azimuth (between 0 and 360°) is between left and right value, blinds shading will be activated",
    "azimuth_right_label" : "Right Azimuth",
-   "description" : "Manage blinds for optimal insulation and shading ",
+   "m_descr" : "Manage blinds for optimal insulation and shading ",
    "devices_label" : "Blinds",
    "insulation_active_helper" : "Activate insulation when outside temperature falls below a certain level",
    "insulation_active_label" : "Blinds insulation",
@@ -21,6 +21,6 @@
    "temperature_outside_label" : "Outside temperature",
    "temperature_outside_sensor_label" : "Outside Temperature Sensor",
    "temperature_outside_shade_helper" : "If outside temperature rises above this level shading will be activated",
-   "title" : "Blinds control",
+   "m_title" : "Blinds control",
    "uv_sensor_label" : "UV Sensor"
 }
