Improve german translation

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,28 +1,28 @@
 {
    "altitude_label" : "Sonnenstand",
-   "altitude_shade_helper" : "Wenn der Sonnenstand über diesen Wert steigt wird die Beschattung aktiviert",
+   "altitude_shade_helper" : "Wenn der Sonnenstand höher als diesen Wert ist, wird die Beschattung aktiviert",
    "azimuth_helper" : "Wenn der Azimut der Sonne (zwischen 0 und 360°) zwischen dem Links- und dem Rechts-Wert liegt wird die Beschattung aktiviert",
    "azimuth_left_label" : "Azimut Links",
    "azimuth_right_label" : "Azimut Rechts",
    "devices_label" : "Jalousie",
    "forecast_high_sensor_label" : "Vorhersage Höchswert Modul",
    "forecast_low_sensor_label" : "Vorhersage Tiefstwert Modul",
-   "forecast_optional_helper" : "Optional. Falls nicht gesetzt, wird die Aussentemperatur ",
-   "insulation_active_helper" : "Aktiviert Isolation durch Jalousien wenn die Aussentemperatur unter den anagegebenen Wert fällt",
+   "forecast_optional_helper" : "Optional. Falls nicht gesetzt, wird die aktuelle Aussentemperatur verwendet",
+   "insulation_active_helper" : "Aktiviert Isolation durch Jalousien wenn die Vorhersage Tiefstwert oder die Aussentemperatur im einstellten Zeitraum unter den anagegebenen Wert fällt",
    "insulation_active_label" : "Jalousien Isolation",
    "m_descr" : "Steuert Jalousien für optimale Beschattung und Isolation abhängig von der Temperatur.<br>Siehe <a href=https://github.com/maros/Zway-BlindControl/blob/master/README.md>github.com/maros/Zway-BlindControl</a> für detailliertere Dokumentation.",
    "m_title" : "Jalousien Steuerung",
    "position_label" : "Jalousien Position",
-   "shade_active_helper" : "MISSINGUse blinds for shading when outside-, inside-temperature and sun intensity rise above a certain level",
+   "shade_active_helper" : "Aktiviert optimale Beschattung durch Jalousien abhängig vom Sonnenstand, Sonnenintensitär, Innen- und Aussentemperaruren.",
    "shade_active_label" : "Jalousien Beschattung",
    "sun_uv_helper" : "Wenn der UV Index über den angegebenen Wert steigt wird die Beschattung aktiviert",
    "sun_uv_label" : "UV Index",
-   "temperature_inside_label" : "MISSING",
+   "temperature_inside_label" : "Innentemperatur",
    "temperature_inside_sensor_label" : "Innentemperatur Modul",
-   "temperature_inside_shade_helper" : "MISSINGIf inside temperature rises above this level shading will be activated",
-   "temperature_outside_insulation_helper" : "MISSINGIf outside temperature falls below this level shading will be activated",
-   "temperature_outside_label" : "Aussentemperatur Modul",
-   "temperature_outside_sensor_label" : "MISSING",
+   "temperature_inside_shade_helper" : "Wenn die Innentemperatur über den angegebenen Wert steigt, wird die Beschattung aktiviert.",
+   "temperature_outside_insulation_helper" : "Wenn der Vorhersage Tiefstwert oder die Aussentemperatur unter den angegebenen Wert fällt wird die Isolation durch Jalousien aktiviert.",
+   "temperature_outside_label" : "Aussentemperatur",
+   "temperature_outside_sensor_label" : "Aussentemperatur Modul",
    "temperature_outside_shade_helper" : "MISSINGIf outside temperature rises above this level shading will be activated",
    "time_from_label" : "Von",
    "time_placeholder" : "HH:MM",
