--- a/lang/en.json
+++ b/lang/en.json
@@ -7,8 +7,8 @@
    "devices_label" : "Blinds",
    "forecast_high_sensor_label" : "Forecast high",
    "forecast_low_sensor_label" : "Forecast low",
-   "forecast_optional_helper" : "Optional. Will use current outside temperature if not proviced.",
-   "insulation_active_helper" : "Activate insulation when outside temperature falls below a certain level",
+   "forecast_optional_helper" : "Optional. Will use current outside temperature if not provided",
+   "insulation_active_helper" : "Activate insulation when outside temperature falls below the given level",
    "insulation_active_label" : "Blinds insulation",
    "m_descr" : "Manage blinds for optimal insulation and shading. Shading rules can be defined for multiple zones using solar position, UV intensity index, in- and outside temperature. <br>Check <a href=https://github.com/maros/Zway-BlindControl/blob/master/README.md>github.com/maros/Zway-BlindControl</a> for detailed documentation.",
    "m_title" : "Blinds Control",
