--- a/lang/de.json
+++ b/lang/de.json
@@ -15,8 +15,8 @@
    "position_label" : "Jalousien Position",
    "shade_active_helper" : "Aktiviert optimale Beschattung durch Jalousien abhängig vom Sonnenstand, Sonnenintensitär, Innen- und Aussentemperaruren.",
    "shade_active_label" : "Jalousien Beschattung",
-   "sun_uv_helper" : "Wenn der UV Index über den angegebenen Wert steigt wird die Beschattung aktiviert",
-   "sun_uv_label" : "UV Index",
+   "sun_uv_helper" : "Wenn der UV Index oder die Sonneninensität über den angegebenen Wert steigt wird die Beschattung aktiviert",
+   "sun_uv_label" : "UV Index oder Sonneninensität",
    "temperature_inside_label" : "Innentemperatur",
    "temperature_inside_sensor_label" : "Innentemperatur Modul",
    "temperature_inside_shade_helper" : "Wenn die Innentemperatur über den angegebenen Wert steigt, wird die Beschattung aktiviert.",
@@ -27,5 +27,5 @@
    "time_from_label" : "Von",
    "time_placeholder" : "HH:MM",
    "time_to_label" : "Bis",
-   "uv_sensor_label" : "UV Sensor"
+   "uv_sensor_label" : "UV Sensor oder Sonnenintensitäts Sensor"
 }
