--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+1.07 2016 Dec 05, Mon
+    * Fix winter mode calculations
+
 1.06 2016 May 31, Tue
     * Add translation
     * Also accept solar intensity device
