--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.08 2019 Apr 26, Fri
+    * metrics:target may be null
+    * Use device target level as current position
+    * Clarify log messages
+    * Update copyright
+
 1.07 2016 Dec 05, Mon
     * Fix winter mode calculations
 
